<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:gravity="center_vertical" >

        <!-- 配电房 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/pdf_label"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_pdf_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </Spinner>

        <!-- 规划方式 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/roadPlan_label"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/roadplan_group_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/roadplan_jc_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roadplan_jc"
                android:textColor="#FFF" />

            <RadioButton
                android:id="@+id/roadplan_gj_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roadplan_gj"
                android:textColor="#FFF" />

            <RadioButton
                android:id="@+id/roadplan_bx_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roadplan_bx"
                android:textColor="#FFF" />
        </RadioGroup>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:background="@color/query_btn_bg"
            android:onClick="roadPlan"
            android:textColor="#FFF"
            android:text="@string/query_label" />
    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/myMapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />

</LinearLayout>