<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:background="#FFF"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_choice_label"
        android:textColor="#FF00"
        android:textSize="36sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="#CBC4C4"
        android:gravity="center"/>

    <ListView
        android:id="@+id/listview_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="1dp"
        android:divider="#CBC4C4"
        >
        </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/pre_btn_id"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pre_page_label"/>
        <Button
            android:id="@+id/next_btn_id"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_page_label"/>
        <Button
            android:id="@+id/ok_btn_id"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sure_page_label"/>
        </LinearLayout>
</LinearLayout>
