<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
	    android:background="#000">

    <!-- 配电房选择面板 -->

    <include
        layout="@layout/choice_pdf_panel"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
        android:layout_marginRight="180dp"
        android:id="@+id/dsm_choice_pdf_panel_id"
        />

    <!-- 具体大类设备明细面板 -->

	<LinearLayout
	    android:id="@+id/device_type_container_id"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal"
	    android:layout_marginTop="10dp"
	    >
	</LinearLayout>

    <!-- 大类设备选项卡面板 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/device_type_transformer_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dms_type_item1" />

        <Button
            android:id="@+id/device_type_cable_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dms_type_item2" />

        <Button
            android:id="@+id/device_type_cabinet_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dms_type_item3" />

        <Button
            android:id="@+id/device_type_temperature_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dms_type_item4" />
    </LinearLayout>

</LinearLayout>