<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_bg"
    >

    <!-- 头像 -->
    <ImageView
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:contentDescription="@string/login_head_description"
        android:background="@drawable/login_default_head"/>

    <!-- 用户名 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:textSize="22sp"
            android:textColor="#FFF"/>
        <EditText
            android:id="@+id/login_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:labelFor="@id/login_username"
            android:textColor="#FFF"
            android:textSize="22sp"
            android:text="SuperAdmin"/>
    </LinearLayout>

    <!-- 密码 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="22sp"
            android:textColor="#FFF"/>
        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:labelFor="@id/login_pwd"
            android:textColor="#FFF"
            android:textSize="22sp"
            android:text="hello"/>
    </LinearLayout>

    <!-- 登录按钮 -->
    <RelativeLayout
        android:layout_width="390dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/login_btn"
        android:onClick="login">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:textColor="#FFF"
            android:textSize="22sp"/>
    </RelativeLayout>
</LinearLayout>
